--- a/PROJECT_4_HEAT_EQUATION_METHODS/实验报告.md
+++ b/PROJECT_4_HEAT_EQUATION_METHODS/实验报告.md
@@ -83,17 +83,6 @@ def solve_implicit(self, dt=0.1, plot_times=None):
 
 **关键代码片段：**
 ```python
-# 在此处粘贴你的核心实现代码
-```
-
-### 3.4 solve_ivp方法
-
-**核心思想：** [简述算法思路]
-
-**优势：** 自适应步长，高精度
-
-**关键代码片段：**
-```python
 def solve_crank_nicolson(self, dt=0.5, plot_times=None):
     r = self.alpha * dt / (self.dx**2)
     banded_matrix_A = np.zeros((3, self.nx - 2))
@@ -105,6 +94,29 @@ def solve_crank_nicolson(self, dt=0.5, plot_times=None):
     for n in range(1, int(self.T_final / dt) + 1):
         rhs = (r/2) * u[:-2] + (1 - r) * u[1:-1] + (r/2) * u[2:]
         u[1:-1] = scipy.linalg.solve_banded((1, 1), banded_matrix_A, rhs)
+```
+
+### 3.4 solve_ivp方法
+
+**核心思想：** [将PDE转化为ODE系统，利用scipy的ODE求解器求解。]
+
+**优势：** 自适应步长，高精度
+
+**关键代码片段：**
+```python
+def _heat_equation_ode(self, t, u_internal):
+    u_full = np.concatenate(([0.0], u_internal, [0.0]))
+    d2u_dx2 = laplace(u_full) / (self.dx**2)
+    return self.alpha * d2u_dx2[1:-1]
+
+def solve_with_solve_ivp(self, method='BDF', plot_times=None):
+    sol = solve_ivp(
+        fun=self._heat_equation_ode,
+        t_span=(0, self.T_final),
+        y0=self.u_initial[1:-1],
+        method=method,
+        t_eval=plot_times
+    )
 ```
 
 ## 4. 实验结果
